--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "goit-js-hw-08",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://nilkad.github.io/goit-js-hw-08",
+  "homepage": "https://nilkad.github.io/goit-js-hw-08/",
   "scripts": {
     "start": "parcel src/*.html --open",
     "build": "parcel build src/*.html --public-url /goit-js-hw-08/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://https://github.com/NilKad/goit-js-hw-08.git"
+    "url": "git+https://github.com/NilKad/goit-js-hw-08.git"
   },
   "keywords": [],
   "author": "Alexander Kadulin <kadulin@gmail.com>",
