--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "goit-js-hw-08",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://nilkad.github.io/goit-js-hw-08/",
+  "homepage": "https://NilKad.github.io/goit-js-hw-08/",
   "scripts": {
     "start": "parcel src/*.html --open",
     "build": "parcel build src/*.html --public-url /goit-js-hw-08/"
